# multimodal-biometric-mlops

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
configs/dataloader/: dataloader.yaml
configs/dataset/: dataset.yaml
configs/infer/: infer.yaml
configs/model/: model.yaml
configs/preprocess/: preprocess.yaml
configs/train/: train.yaml
data/processed/multimodal_biometrics/: manifest.parquet  stats.json
docs/architecture/: HLD.md  LLD.md  bottlenecks.md  decisions.md
docs/runbooks/: azure.md  local.md
runs/20260204_234336_bioml/: pip_freeze.txt
runs/20260207_112637_bioml/: system.json
runs/20260207_112637_bioml/tb/: events.out.tfevents.1770443810.Amits-MacBook-Pro.local.68482.0
runs/20260207_113557_bioml/: git.json  reproducibility.json
runs/20260207_113557_bioml/tb/: events.out.tfevents.1770444360.Amits-MacBook-Pro.local.69414.0
runs/20260207_121718_bioml/: metrics.jsonl
runs/20260207_121718_bioml/checkpoints/: best.pt  last.pt
runs/20260207_121718_bioml/tb/: events.out.tfevents.1770446852.Amits-MacBook-Pro.local.71054.0
runs/20260207_125210_bioml/: label_map.json  metrics.jsonl  pip_freeze.txt
runs/20260207_125210_bioml/tb/: events.out.tfevents.1770448943.Amits-MacBook-Pro.local.73526.0
src/bioml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bioml/data/: dataloading.py  dataset.py  indexer.py  (+3 more)
tests/: test_dataset_shapes.py  test_manifest.py  test_reproducibility.py  test_smoke_train.py
(+585 files in other folders)
